[package]
name = "nude"
version = "0.3.0"
description = "High performance nudity detection"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/nude-rs"
readme = "README.md"
categories = ["multimedia::images"]
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/nude-rs" }

[dependencies]
log = "0.4"
image = { version = "0.25", default-features = false }
rand = "0.8"

[dev-dependencies]
env_logger = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
